PR14396: Add UTF-16/32 conversion functions

* runtime/stp_string.c (_stp_convert_utf32): New, write the given
  UTF-32 code point as UTF-8 in the given buffer.
* tapset/linux/conversions.stp (kernel_string_utf32): New, read and
  convert a UTF-32 string from kernel memory.
  (kernel_string_utf16): Same for UTF-16, handling surrogate pairs.
  (kernel_string2_utf32, kernel_string2_utf16): Same w/ custom error.
* tapset/linux/uconversions.stp: All of the above for user memory.
* testsuite/buildok/conversions*.stp: Add build tests.
* testsuite/systemtap.base/utf_*: New runtime tests.